[package]
name = "todo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
serde = "1.0.206"
serde_json = "1.0.124"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = {version="0.3.18",features = ["env-filter","fmt","ansi"]}
